feat: onprogress mock

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -212,6 +212,14 @@ div[class*="-ActionsWrapper"] {
     margin-block-start: 0;
 }
 
-[data-testid="card-offset"] {
-    margin-left: -18px !important;
+#sidebar-loading {
+    margin-top: -60px;
 }
+
+/*[data-testid="card-offset"] {*/
+/*    margin-left: -18px !important;*/
+/*}*/
+/*[data-testid="card-message-offset"] {*/
+/*    margin-left: -18px !important;*/
+/*    margin-bottom: 20px !important;*/
+/*}*/
