--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -243,7 +243,6 @@ div[class*="-ActionsWrapper"] {
 }
 
 .terminal {
-    background-image: url("http://localhost:3001/assets/images/terminal.gif");
     background-size: contain;
     position: absolute;
     background-position: center;
@@ -255,7 +254,6 @@ div[class*="-ActionsWrapper"] {
 #terminal-container {
     display: inline-block;
     overflow: hidden;
-    /*height: 420px;*/
 }
 
 #terminal-container #image__card-terminal {
@@ -263,6 +261,68 @@ div[class*="-ActionsWrapper"] {
     transition: transform .2s;
 }
 
-#container__card-terminal #image__card-terminal {
-    transform: scale(1.041) translateY(-10px) translateX(-1px);
+#head {
+    font-family: monospace;
+    color: #fff;
+    margin: auto;
+    padding: 35px;
+    font-size: 40px;
+    text-align: center;
 }
+#bar {
+    width: 100%;
+    height: 25px;
+    background-color: #DAD9D9;
+    margin: 0 auto;
+    font-family: monospace;
+    padding: inherit;
+    float: none;
+    padding-inline-start: 10px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    text-align: left;
+}
+#red {
+    background-color: #E94B35;
+    border-radius: 100%;
+    width: 15px;
+    height: 15px;
+    margin: 0 auto;
+    left: -210px;
+    bottom: -20%;
+    position:relative;
+}
+#yellow {
+    background-color: #f0f000;
+    border-radius: 100%;
+    width: 15px;
+    height: 15px;
+    margin: 0 auto;
+    left: -190px;
+    bottom: 40%;
+    position:relative;
+    display: block;
+}
+#green {
+    background-color: #1AAF5C;
+    border-radius: 100%;
+    width: 15px;
+    height: 15px;
+    margin: 0 auto;
+    left: -170px;
+    bottom: 99%;
+    position:relative;
+    display: block;
+}
+#screen {
+    background-color: #33485E;
+    width: 750px;
+    height: 450px;
+    border-radius: 2%;
+    margin: 0 auto;
+    padding: 1px;
+}
+
+/*#container__card-terminal #image__card-terminal {*/
+/*    transform: scale(1.1) translateY(-10px) translateX(-1px);*/
+/*}*/
