--- a/src/styles/landing.module.css
+++ b/src/styles/landing.module.css
@@ -302,9 +302,9 @@
     letter-spacing: -0.008em;
 }
 
-/*#landing-body {*/
-/*    font-family: "Charlie Text", -apple-system, "BlinkMacSystemFont", "Segoe UI", Roboto, "Noto Sans", Ubuntu, "Droid Sans", "Helvetica Neue", sans-serif;*/
-/*}*/
+.charlie-text {
+    font-family: "Charlie Text", -apple-system, "BlinkMacSystemFont", "Segoe UI", Roboto, "Noto Sans", Ubuntu, "Droid Sans", "Helvetica Neue", sans-serif;
+}
 
 .landing-navigation {
     font-family: 'Rubik' , sans-serif;
