change log: - fix some issue - update footer content

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -416,3 +416,7 @@ div[class*="-ActionsWrapper"] {
     width: 2.9rem !important;
     justify-content: end !important;
 }
+
+#empty-state-height {
+    min-height: 50vh !important;
+}
