--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -142,6 +142,10 @@ html[data-color-mode="dark"][data-theme~="dark:dark"] {
     border-bottom: 1px solid #10203a;
 }
 
+#mobile-header > header > div > h1 {
+    margin-top: unset !important;
+}
+
 .text-overflow-clip {
     white-space: nowrap;
     width: 100%;
